--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "sass": "^1.49.9",
     "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^2.5.0",
